--- a/src/sass/components/_newsBlock.sass
+++ b/src/sass/components/_newsBlock.sass
@@ -1,16 +1,20 @@
 .news
   &__wrap
     display: flex
-    align-items: center
+    align-items: stretch
     justify-content: space-between
     margin-bottom: 60px
 
     &-elem
       cursor: pointer
+      overflow: hidden
       position: relative
+      margin: 15px
       width: 100%
-      max-width: 480px
-      height: 480px
+      //height: 100%
+      //min-height: 280px
+      //max-height: 480px
+      background-color: #000
       box-shadow: 0 5px 21px 9px rgba(0, 0, 0, 0.3)
       &:hover
         .news__wrap-hidden
@@ -18,23 +22,20 @@
           visibility: visible
           transition: opacity .3s ease-in-out, visibility .3s ease-in-out
 
-      &--0
-        background-image: url("../img/ImagePreview-0_news.jpg")
-        background-repeat: no-repeat
-        background-size: cover
-      &--1
-        background-image: url("../img/ImagePreview-1_news.jpg")
-        background-repeat: no-repeat
-        background-size: cover
-      &--2
-        background-image: url("../img/ImagePreview-2_news.jpg")
-        background-repeat: no-repeat
-        background-size: cover
+      &--alone
+        max-width: 480px
+
       &--full
         max-width: 1020px
-        background-image: url("../img/ImagePreview-full_news.jpg")
-        background-repeat: no-repeat
-        background-size: cover
+
+      img
+        z-index: 0
+        position: relative
+        //max-width: 100%
+        //max-height: 100%
+        //top: 50%
+        left: 50%
+        transform: translate(-50%, 0)
 
     &-hidden
       opacity: 0
@@ -53,7 +54,12 @@
       p
         font:
           weight: bold
-          size: 40px
         text-align: center
         color: $colorFuelYellow
         text-shadow: 0 0 48px rgba(0, 0, 0, 0.4)
+        +rmin(1024)
+          font-size: 25px
+        +rmin(1440)
+          font-size: 30px
+        +rmin(1920)
+          font-size: 40px
