Replace - javascript:void(0) - #

--- a/src/pug/components/_language.pug
+++ b/src/pug/components/_language.pug
@@ -8,7 +8,7 @@
 .lang
   -for(var i = 0, len = langArr.length; i < len; i++)
     a(
-      href='javascript:void(0);'
+      href='#'
       class='lang__name'
     )!= langArr[i]
 
