--- a/src/pug/components/_order.pug
+++ b/src/pug/components/_order.pug
@@ -33,13 +33,13 @@
         a(href="mailto:info@taiko.moscow" title="Email" class="order__form-link")
           i.icon-email
           i.icon-email_hover
-        a(href="javascript:void(0);" title="WhatsApp" class="order__form-link")
+        a(href="#" title="WhatsApp" class="order__form-link")
           i.icon-whatsapp
           i.icon-whatsapp_hover
-        a(href="javascript:void(0);" title="Telegram" class="order__form-link")
+        a(href="#" title="Telegram" class="order__form-link")
           i.icon-telegram
           i.icon-telegram_hover
-        a(href="javascript:void(0);" title="Viber" class="order__form-link")
+        a(href="#" title="Viber" class="order__form-link")
           i.icon-viber
           i.icon-viber_hover
 
