--- a/src/pug/components/_social.pug
+++ b/src/pug/components/_social.pug
@@ -10,7 +10,7 @@
 .social
   -for(var i = 0, len = socialArr.length; i < len; i++)
     a(
-      href='javascript:void(0);'
+      href='#'
       class='social__name'
     )!= socialArr[i]
 
