--- a/src/pug/components/_header.pug
+++ b/src/pug/components/_header.pug
@@ -15,7 +15,7 @@ header.header
     .header__logotype.icon-logotype
 
     a(
-      href="javascript:void(0);"
+      href="#"
       class="header__order"
       js-order
     )!= "ЗАКАЗАТЬ<br/>ВЫСТУПЛЕНИЕ"
