Header order - hover text.

--- a/src/sass/components/_header.sass
+++ b/src/sass/components/_header.sass
@@ -74,7 +74,7 @@
       weight: bold
     color: $colorFuelYellow
     text-align: right
-    transition: background-color .25s ease-in-out
+    transition: background-color .25s ease-in-out, color .25s ease-in-out
     +rmin(1024)
       font-size: 20px
     +rmin(1440)
@@ -85,4 +85,4 @@
     &:hover
       background-color: $colorFuelYellow
       color: $colorBlack
-      transition: background-color .25s ease-in-out
+      transition: background-color .25s ease-in-out, color .25s ease-in-out
