Replace input line-height -> height.

--- a/src/sass/components/_order.sass
+++ b/src/sass/components/_order.sass
@@ -1,7 +1,7 @@
 // MENU
 
 .order
-  display: none
+  //display: none
   z-index: 100
   position: fixed
   top: 0
@@ -201,7 +201,7 @@
 
       input
         width: 100%
-        line-height: (60px - 10)
+        height: 100%
         font:
           weight: bold
         text-align: center
