Oreder: phone -> readonly del; add transition input -> :focus;

--- a/src/pug/components/_order.pug
+++ b/src/pug/components/_order.pug
@@ -19,7 +19,7 @@
         input(type="text" placeholder="ВАШЕ ИМЯ")
 
       .order__form-field.order__form-field--phone
-        input(type="text" readonly=true placeholder="8 962 999 66 62")
+        input(type="text" placeholder="ВАШ НОМЕР")
 
       .order__form-field.order__form-field--email
         input(type="email" placeholder="ПОЧТА")
