Order block add slide in right animation + img order fade in. Clean order btn focus.

--- a/src/sass/app.sass
+++ b/src/sass/app.sass
@@ -28,7 +28,7 @@
 @import components/order
 @import components/modal
 @import components/gallery
-//@import components/index
+@import components/index
 
 @import components/homepage
 @import components/news
