--- a/src/pug/components/_order.pug
+++ b/src/pug/components/_order.pug
@@ -1,9 +1,9 @@
 // ORDER :: START
 
 #order.order
-  img(src="./img/ImageBg_order.png")
+  img(src="./img/ImageBg_order.png" class="animated fadeIn")
 
-  .order__block
+  .order__block.animated.slideInRight
 
     .order__phone-wrap
       p.order__phone-title!= "ПОЗВОНИТЬ"
