--- a/src/sass/components/_index.sass
+++ b/src/sass/components/_index.sass
@@ -1,4 +1,30 @@
-// INDEX
+.animated
+  animation-duration: 1s
+  animation-fill-mode: both
 
-.hello
-  display: none
+// FADE-IN
+// ===============
+@keyframes fadeIn
+  from
+    opacity: 0
+  to
+    opacity: 1
+
+.is-activeOrder .fadeIn
+  animation-name: fadeIn
+  animation-duration: 0.8s
+
+
+// SLIDE-IN-RIGHT
+// ===============
+@keyframes slideInRight
+  from
+    transform: translate3d(100%, 0, 0)
+    visibility: visible
+  to
+    transform: translate3d(0, 0, 0)
+
+.is-activeOrder .slideInRight
+  animation-name: slideInRight
+  animation-duration: 0.5s
+
