--- a/src/pug/shared/_mixins.pug
+++ b/src/pug/shared/_mixins.pug
@@ -19,7 +19,14 @@ mixin newsBlock(idx, className)
 
 
 mixin customBtn(className, text)
-  a.cbutton(href="" class= className)
+  a.cbutton(href="#" class= className)
+    .cbutton__block
+      .cbutton__block-bg.cbutton__block-bg--0
+      .cbutton__block-bg.cbutton__block-bg--1
+    .cbutton__text!= text
+
+mixin customBtnSubmit(className, text)
+  button.cbutton(class= className, type="submit")
     .cbutton__block
       .cbutton__block-bg.cbutton__block-bg--0
       .cbutton__block-bg.cbutton__block-bg--1
