--- a/src/sass/components/_customButton.sass
+++ b/src/sass/components/_customButton.sass
@@ -3,6 +3,10 @@
   position: relative
   display: table
   height: 53px
+  background-color: transparent
+  border: none
+  padding: 0
+  color: #fff
   margin:
     left: auto
     right: auto
