--- a/src/sass/components/_index.sass
+++ b/src/sass/components/_index.sass
@@ -1,3 +1,12 @@
+// ERROR
+// ===============
+.error
+  color: red
+  font-size: 12px
+
+
+// ANIMATION
+// ===============
 .animated
   animation-duration: 1s
   animation-fill-mode: both
