--- a/src/sass/components/_order.sass
+++ b/src/sass/components/_order.sass
@@ -1,7 +1,7 @@
 // MENU
 
 .order
-  display: none
+  //display: none
   z-index: 100
   position: fixed
   top: 0
@@ -159,7 +159,7 @@
 
     &-field
       width: 100%
-      height: 60px
+      min-height: 60px
       margin-bottom: 30px
 
       +rmin(1024)
@@ -168,8 +168,6 @@
         margin-bottom: 25px
       +rmin(1920)
         margin-bottom: 30px
-
-      &--phone
 
       &--email
         +rmin(1024)
@@ -189,7 +187,7 @@
 
       input
         width: 100%
-        height: 100%
+        height: 60px
         font:
           weight: bold
         text-align: center
