Social link - target='_blank'

--- a/src/pug/components/_social.pug
+++ b/src/pug/components/_social.pug
@@ -11,6 +11,7 @@
   -for(var i = 0, len = socialArr.length; i < len; i++)
     a(
       href='#'
+      target='_blank'
       class='social__name'
     )!= socialArr[i]
 
