--- a/src/sass/components/_menu.sass
+++ b/src/sass/components/_menu.sass
@@ -83,6 +83,11 @@
       weight: bold
     color: $colorNobel
     letter-spacing: 0
+    transition: color 0.3s ease-in-out
+    &:hover
+      color: $colorFuelYellow
+      transition: color 0.3s ease-in-out
+
     +rmin(1024)
       font-size: 20px
       margin:
