Add hover - footer email, phone.

--- a/src/sass/components/_footer.sass
+++ b/src/sass/components/_footer.sass
@@ -43,6 +43,10 @@
   &__question
     a
       display: block
+      transition: color 0.3s ease-in-out
+      &:hover
+        color: $colorFuelYellow
+        transition: color 0.3s ease-in-out
 
     > p
       color: $colorNobel
