Download pdf hover, add attr.

--- a/src/pug/components/_footer.pug
+++ b/src/pug/components/_footer.pug
@@ -10,7 +10,7 @@ footer.footer
           a(href="tel:89629996662").footer__question-phone!= '8 (962) 999-666-2'
           a(href="mailto:info@taiko.moscow").footer__question-email!= 'INFO@TAIKO.MOSCOW'
 
-        .footer__present
+        a(href="#", js-downloadPdf).footer__present
           .footer__present-image
             .footer__present-bg
             .footer__present-icon.icon-pfd
