Slide, fade order.

--- a/src/pug/components/_order.pug
+++ b/src/pug/components/_order.pug
@@ -1,9 +1,9 @@
 // ORDER :: START
 
-#order.order
-  img(src="./img/ImageBg_order.png" class="animated fadeIn")
+#order.order.animated
+  img(src="./img/ImageBg_order.png" class="animated")
 
-  .order__block.animated.slideInRight
+  .order__block.animated
 
     .order__phone-wrap
       p.order__phone-title!= "ПОЗВОНИТЬ"
