--- a/src/sass/components/_order.sass
+++ b/src/sass/components/_order.sass
@@ -1,33 +1,49 @@
 // MENU
 
 .order
-  display: none
+  opacity: 0
+  visibility: hidden
   z-index: 100
+  overflow: hidden
   position: fixed
   top: 0
   left: 0
   width: 100vw
   height: 100vh
   background-color: rgba($colorBlack, 0.5)
-  overflow: hidden
+  transition: 0.45s
 
   .is-activeOrder &
-    display: block
+    opacity: 1
+    visibility: visible
 
   img
+    opacity: 0
     z-index: 0
     position: absolute
     top: 0
     left: 0
 
+    .is-activeOrder &
+      opacity: 1
+      animation-name: fadeIn
+      transition: opacity 0.35s ease-in-out
+
   &__block
+    overflow: auto
     position: absolute
     top: 0
-    right: 0
+    right: -100%
     height: 100%
     background-color: $colorNero
     box-shadow: 0 0 36px 24px rgba(0, 0, 0, 0.5)
-    overflow: auto
+    transition: right 0.45s ease-in-out
+
+    .is-activeOrder &
+      right: 0
+      transition: right 0.45s ease-in-out
+
+
     +rmin(1024)
       width: 540px
       padding:
