Add rus error message order.

--- a/src/pug/components/_order.pug
+++ b/src/pug/components/_order.pug
@@ -1,9 +1,9 @@
 // ORDER :: START
 
-#order.order.animated
-  img(src="./img/ImageBg_order.png" class="animated")
+#order.order
+  img(src="./img/ImageBg_order.png" class="")
 
-  .order__block.animated
+  .order__block
 
     .order__phone-wrap
       p.order__phone-title!= "ПОЗВОНИТЬ"
