--- a/src/sass/components/_order.sass
+++ b/src/sass/components/_order.sass
@@ -23,10 +23,10 @@
     position: absolute
     top: 0
     left: 0
+    transition: opacity 0.35s ease-in-out
 
     .is-activeOrder &
       opacity: 1
-      animation-name: fadeIn
       transition: opacity 0.35s ease-in-out
 
   &__block
@@ -37,12 +37,11 @@
     height: 100%
     background-color: $colorNero
     box-shadow: 0 0 36px 24px rgba(0, 0, 0, 0.5)
-    transition: right 0.45s ease-in-out
+    transition: right 0.5s ease-in-out
 
     .is-activeOrder &
       right: 0
       transition: right 0.45s ease-in-out
-
 
     +rmin(1024)
       width: 540px
