--- a/src/sass/components/_index.sass
+++ b/src/sass/components/_index.sass
@@ -25,14 +25,14 @@
 
 // FADE-OUT
 // ===============
-@keyframes fadeIn
+@keyframes fadeOut
   from
     opacity: 1
   to
     opacity: 0
 
-.fadeIn
-  animation-name: fadeIn
+.fadeOut
+  animation-name: fadeOut
   animation-duration: 0.8s
 
 
@@ -48,4 +48,49 @@
 .slideInRight
   animation-name: slideInRight
   animation-duration: 0.5s
+
+
+// ZOOM-IN-LEFT
+// ===============
+@keyframes zoomInLeft
+  from
+    opacity: 0
+    transform: scale3d(0.1, 0.1, 0.1) translate3d(-1000px, 0, 0)
+    animation-timing-function: cubic-bezier(0.55, 0.055, 0.675, 0.19)
+  60%
+    opacity: 1
+    transform: scale3d(0.475, 0.475, 0.475) translate3d(10px, 0, 0)
+    animation-timing-function: cubic-bezier(0.175, 0.885, 0.32, 1)
+
+.zoomInLeft
+  animation-name: zoomInLeft
+
+
+// FLIP-IN-X
+// ===============
+@keyframes flipInX
+  from
+    transform: perspective(400px) rotate3d(1, 0, 0, 90deg)
+    animation-timing-function: ease-in
+    opacity: 0
+
+  40%
+    transform: perspective(400px) rotate3d(1, 0, 0, -20deg)
+    animation-timing-function: ease-in
+
+  60%
+    transform: perspective(400px) rotate3d(1, 0, 0, 10deg)
+    opacity: 1
+
+  80%
+    transform: perspective(400px) rotate3d(1, 0, 0, -5deg)
+
+  to
+    transform: perspective(400px)
+
+.flipInX
+  backface-visibility: visible !important
+  animation-name: flipInX
+
+
 
