--- a/src/sass/components/_order.sass
+++ b/src/sass/components/_order.sass
@@ -203,13 +203,25 @@
       input
         width: 100%
         height: 60px
-        font:
-          weight: bold
-        text-align: center
-        color: $colorFuelYellow
+        padding:
+          left: 15px
+          right: 15px
         background-color: transparent
         border: 5px solid $colorBlack
+        font:
+          weight: bold
+        text-align: left
+        color: $colorFuelYellow
         transition: border-color 0.3s ease-in-out
+        &::-webkit-input-placeholder
+          text-align: center
+        &::-moz-placeholder
+          text-align: center
+        &:-ms-input-placeholder
+          text-align: center
+        &:-moz-placeholder
+          text-align: center
+
 
         &:focus
           border-color: $colorFuelYellow
