Add location to homepage - click logo.

--- a/src/pug/components/_header.pug
+++ b/src/pug/components/_header.pug
@@ -12,7 +12,7 @@ header.header
 
       p.header__hamburger-text!= "МЕНЮ"
 
-    .header__logotype.icon-logotype
+    a(href="homepage.html").header__logotype.icon-logotype
 
     a(
       href="#"
