--- a/src/pug/components/_menu.pug
+++ b/src/pug/components/_menu.pug
@@ -6,7 +6,7 @@
 
   .container
 
-    i.menu__logo.icon-menuLogo
+    a(href="homepage.html").menu__logo.icon-menuLogo
 
     img(src="./img/ImageGirl_menu.png" class="menu__img menu__img--girl")
 
