--- a/src/sass/components/_index.sass
+++ b/src/sass/components/_index.sass
@@ -11,18 +11,6 @@
   animation-duration: 1s
   animation-fill-mode: both
 
-// FADE-IN
-// ===============
-@keyframes fadeIn
-  from
-    opacity: 0
-  to
-    opacity: 1
-
-.fadeIn
-  animation-name: fadeIn
-  animation-duration: 0.8s
-
 // FADE-OUT
 // ===============
 @keyframes fadeOut
@@ -36,34 +24,18 @@
   animation-duration: 0.8s
 
 
-// SLIDE-IN-RIGHT
+// FLIP-IN-X
 // ===============
-@keyframes slideInRight
+@keyframes slideInDown
   from
-    transform: translate3d(100%, 0, 0)
+    transform: translate3d(0, -100%, 0)
     visibility: visible
+
   to
     transform: translate3d(0, 0, 0)
 
-.slideInRight
-  animation-name: slideInRight
-  animation-duration: 0.5s
-
-
-// ZOOM-IN-LEFT
-// ===============
-@keyframes zoomInLeft
-  from
-    opacity: 0
-    transform: scale3d(0.1, 0.1, 0.1) translate3d(-1000px, 0, 0)
-    animation-timing-function: cubic-bezier(0.55, 0.055, 0.675, 0.19)
-  60%
-    opacity: 1
-    transform: scale3d(0.475, 0.475, 0.475) translate3d(10px, 0, 0)
-    animation-timing-function: cubic-bezier(0.175, 0.885, 0.32, 1)
-
-.zoomInLeft
-  animation-name: zoomInLeft
+.slideInDown
+  animation-name: slideInDown
 
 
 // FLIP-IN-X
