--- a/src/pug/homepage.pug
+++ b/src/pug/homepage.pug
@@ -34,6 +34,13 @@ block content
         img(src="./img/ImageWoman_main.png" class="homepage__program-woman")
 
         .homepage__program-video
+          iframe(
+            src="https://www.youtube.com/embed/C7HL5wYqAbU?rel=0&amp;showinfo=0"
+            frameborder="0"
+            allow="autoplay; encrypted-media"
+            allowfullscreen
+          )
+
 
 
     // block news
