--- a/src/sass/components/_homepage.sass
+++ b/src/sass/components/_homepage.sass
@@ -117,9 +117,15 @@
       bottom: 50px
 
     &-video
+      position: relative
       max-width: 1080px
       height: 600px
       background-color: $colorNero
+
+      iframe
+        position: absolute
+        width: 100%
+        height: 100%
 
 
   &__news
