--- a/src/pug/about.pug
+++ b/src/pug/about.pug
@@ -70,7 +70,7 @@ block content
         ];
 
       -for(var i = 0, len = arrImage.length; i < len; i++)
-        div(class="about__member-grid-" + i)
+        div
           img(src="./img/" + arrImage[i] + ".jpg")
 
           .about__member-grid-hidden
