--- a/src/sass/components/_contacts.sass
+++ b/src/sass/components/_contacts.sass
@@ -50,9 +50,30 @@
         font-size: 24px
 
     &-number
+      position: relative
       color: $colorFuelYellow
-      font:
-        weight: bold
+      font-weight: bold
+
+      &:before
+        content: ""
+        position: absolute
+        width: 100%
+        height: 3px
+        bottom: 0
+        left: 0
+        background: $colorFuelYellow
+        visibility: hidden
+        border-radius: 5px
+        transform: scaleX(0)
+        transition: .25s linear
+
+      &:hover
+        &:before,
+        &:before
+          visibility: visible
+          transform: scaleX(1)
+
+
       +rmin(1024)
         font-size: 25px
       +rmin(1440)
