--- a/src/sass/components/_order.sass
+++ b/src/sass/components/_order.sass
@@ -77,9 +77,33 @@
       +rmin(1920)
         font-size: 24px
     &-number
+      position: relative
       color: $colorWhite
-      font:
-        weight: bold
+      font-weight: bold
+      transition: color 0.3s ease-in-out
+
+      &:before
+        content: ""
+        position: absolute
+        width: 100%
+        height: 3px
+        bottom: 0
+        left: 0
+        background: $colorFuelYellow
+        visibility: hidden
+        border-radius: 5px
+        transform: scaleX(0)
+        transition: .25s linear
+
+      &:hover
+        color: $colorFuelYellow
+        transition: color 0.3s ease-in-out
+
+        &:before,
+        &:before
+          visibility: visible
+          transform: scaleX(1)
+
       +rmin(1024)
         font-size: 30px
       +rmin(1440)
