Some change homepage style.

--- a/src/sass/components/_customButton.sass
+++ b/src/sass/components/_customButton.sass
@@ -110,12 +110,14 @@
     position: relative
     z-index: 1
     padding-top: 7px
+    padding:
+      left: 30px
+      right: 30px
     font:
       weight: bold
-      size: 40px
-    padding:
-      left: 15px
-      right: 15px
+      size: 35px
+    letter-spacing: 4px
+
 
     .homepage__main-cbtn &,
     .news__main-cbtn &,
@@ -130,6 +132,8 @@
     .season__container-cbtn &,
     .menu__cbtn &
       padding-top: 11px
+      letter-spacing: 6px
+
       +rmin(1024)
         font-size: 50px
       +rmin(1440)
