Add fixed homepage bg; replace div to a in news block.

--- a/src/pug/homepage.pug
+++ b/src/pug/homepage.pug
@@ -51,7 +51,7 @@ block content
 
         +newsBlock(3, "")
 
-        +customBtn('homepage__news-cbtn', "ДРУГИЕ НОВОСТИ")
+        +customBtnLink("news.html", 'homepage__news-cbtn', "ДРУГИЕ НОВОСТИ")
 
 block footer
   include ./components/_footer
