--- a/src/pug/shared/_mixins.pug
+++ b/src/pug/shared/_mixins.pug
@@ -12,8 +12,8 @@ mixin icon(name, modClass)
 mixin newsBlock(idx, className)
   .news__wrap
     -for(var i = 0; i < idx; i++)
-      div.news__wrap-elem(class= className)
-        img(src="./img/ImagePreview-0_news.jpg")
+      a(href="#").news__wrap-elem(class= className)
+        img(src="./img/ImagePreview-" + i + "_news.jpg")
         .news__wrap-hidden
           p!= "ОТКРЫТИЕ<br/>ЮНИКЛО"
 
