--- a/src/sass/components/_homepage.sass
+++ b/src/sass/components/_homepage.sass
@@ -23,6 +23,7 @@
       background-repeat: no-repeat
       background-size: cover
       background-position: center
+      background-attachment: fixed
 
     &-title
       position: relative
@@ -42,6 +43,7 @@
 
 
   &__program
+    overflow: hidden
     position: relative
     min-height: 2040px
     background-color: $colorBlack
@@ -65,6 +67,7 @@
       z-index: 0
       top: 100px
       left: -24%
+
 
     &-title
       font:
