Fix menu position elem.

--- a/src/sass/components/_lang.sass
+++ b/src/sass/components/_lang.sass
@@ -10,18 +10,19 @@
 
 .lang
   letter-spacing: 0
+  padding-left: 50px
   +rmin(1024)
     margin:
-      top: 45px
-      bottom: 96px
+      top: 20px
+      bottom: 71px
   +rmin(1440)
     margin:
-      top: 55px
-      bottom: 106px
+      top: 35px
+      bottom: 86px
   +rmin(1920)
     margin:
-      top: 65px
-      bottom: 116px
+      top: 50px
+      bottom: 101px
 
   &__name
     @extend %fontPropertiesLang
