--- a/src/pug/components/_menu.pug
+++ b/src/pug/components/_menu.pug
@@ -11,7 +11,7 @@
     img(src="./img/ImageGirl_menu.png" class="menu__img menu__img--girl")
 
     .menu__row
-      a(href="#" class="menu__back" js-backMenu)!= "< НАЗАД"
+      a(href="#" class="menu__back" js-backMenu)!= "<&nbsp;&nbsp;НАЗАД"
 
       +customBtnLink("about.html", "cbutton--hover menu__cbtn", "О ГРУППЕ")
       +customBtnLink("programs.html", "cbutton--hover menu__cbtn", "ПРОГРАММЫ")
