--- a/src/sass/components/_menu.sass
+++ b/src/sass/components/_menu.sass
@@ -20,15 +20,20 @@
   &__img
     z-index: 0
     position: absolute
+    display: block
+    max-width: 100%
+    max-height: 100%
+    height: auto
 
     &--girl
       bottom: 0
-      +rmin(1024)
-        right: -15%
-      +rmin(1440)
-        right: -5%
-      +rmin(1920)
-        right: 0
+      right: -5%
+      //+rmin(1024)
+      //  right: -15%
+      //+rmin(1440)
+      //  right: -5%
+      //+rmin(1920)
+      //  right: -5%
 
     &--bg
       top: 0
@@ -38,15 +43,11 @@
     position: relative
 
   &__cbtn
+    margin-bottom: 15px
+    padding-left: 20px
     &:last-child
       margin-bottom: 0
 
-    +rmin(1024)
-      margin-bottom: 35px
-    +rmin(1440)
-      margin-bottom: 40px
-    +rmin(1920)
-      margin-bottom: 45px
 
   &__logo
     cursor: pointer
@@ -69,19 +70,20 @@
     position: relative
     +rmin(1024)
       padding:
-        top: 40px
+        top: 35px
         bottom: 77px
     +rmin(1440)
       padding:
-        top: 50px
+        top: 45px
         bottom: 87px
     +rmin(1920)
       padding:
-        top: 60px
+        top: 55px
         bottom: 97px
 
   &__back
     display: block
+    padding-left: 60px
     font:
       weight: bold
     color: $colorNobel
