--- a/src/pug/shared/_mixins.pug
+++ b/src/pug/shared/_mixins.pug
@@ -12,7 +12,7 @@ mixin icon(name, modClass)
 mixin newsBlock(idx, className)
   .news__wrap
     -for(var i = 0; i < idx; i++)
-      a(href="#").news__wrap-elem(class= className)
+      a(href="#", class="news__wrap-elem " + className)
         img(src="./img/ImagePreview-" + i + "_news.jpg")
         .news__wrap-hidden
           p!= "ОТКРЫТИЕ<br/>ЮНИКЛО"
