--- a/src/pug/components/_menu.pug
+++ b/src/pug/components/_menu.pug
@@ -2,7 +2,7 @@
 
 #menu.menu.animated
 
-  //img(src="./img/ImageBg_menu.png" class="menu__img menu__img--bg")
+  img(src="./img/menuBg.jpg" class="menu__img menu__img--bg")
 
   .container
 
