--- a/src/pug/homepage.pug
+++ b/src/pug/homepage.pug
@@ -41,8 +41,6 @@ block content
             allowfullscreen
           )
 
-
-
     // block news
     .homepage__news
       .container
@@ -51,7 +49,7 @@ block content
 
         +newsBlock(3, "")
 
-        +customBtnLink("news.html", 'cbutton--hover homepage__news-cbtn', "ДРУГИЕ НОВОСТИ")
+        +customBtnLink("news.html", 'cbutton--hover guhomepage__news-cbtn', "ДРУГИЕ НОВОСТИ")
 
 block footer
   include ./components/_footer
